// Source: CharacterPractice.proto
// Tool: OverfieldTool

syntax = "proto3";

option go_package = "./;excel";
package excel;

message AllCharacterPracticeDatas {
  CharacterPracticeDatas CharacterPractice = 1;
}

message CharacterPracticeDatas {
  repeated CharacterPracticeConfigure Datas = 1;
}

message CharacterPracticeConfigure {
  int32 ID = 1;
  int32 CharacterPractice = 2;
  int32 CharacterLv = 3;
  int32 WeaponID = 4;
  int32 DungeonID = 5;
}
