// Source: Chat.proto
// Tool: OverfieldTool

syntax = "proto3";

option go_package = "./;excel";
package excel;

message AllChatDatas {
  ChatDatas Chat = 1;
  ChatEmotionDatas ChatEmotion = 2;
  ChatChannelDatas ChatChannel = 3;
}

message ChatDatas {
  repeated ChatConfigure Datas = 1;
}

message ChatConfigure {
  int32 ID = 1;
  bool EnabledChatting = 2;
  int32 IntervalSeconds = 3;
  bool EnabledRepeatting = 4;
  int32 RepeatedTimes = 5;
  int32 RepeatedTime = 6;
  int32 NewChannelType = 7;
}

message ChatEmotionDatas {
  repeated ChatEmotionConfigure Datas = 1;
}

message ChatEmotionConfigure {
  int32 ID = 1;
  int32 IconID = 2;
  int32 IconSketchID = 3;
  int32 AchieveConditionID = 4;
  string OpeningTime = 5;
  string ClosingTime = 6;
  bool IsShow = 7;
  int32 NewEmotionType = 8;
}

message ChatChannelDatas {
  repeated ChatChannelConfigure Datas = 1;
}

message ChatChannelConfigure {
  int32 ID = 1;
  repeated ChannelGroupInfo ChannelGroupInfo = 2;
}

message ChannelGroupInfo {
  int32 ChannelID = 1;
  string AssetPath = 2;
}
