// Source: Dungeon.proto
// Tool: OverfieldTool

syntax = "proto3";

option go_package = "./;excel";
package excel;

message AllDungeonDatas {
  DungeonDatas Dungeon = 1;
  CharacterPoolDatas CharacterPool = 2;
  DungeonQuestDatas DungeonQuest = 3;
}

message DungeonDatas {
  repeated DungeonConfigure Datas = 1;
}

message DungeonConfigure {
  int32 ID = 1;
  int32 DungeonID = 2;
  int32 TitleID = 3;
  int32 WorldID = 4;
  int32 TitleIconID = 5;
  int32 SceneID = 6;
  int32 ItemID = 7;
  int32 ItemNum = 8;
  int32 NeedPlayerLevel = 9;
  bool DynamicLevel = 10;
  int32 MonsterLv = 11;
  int32 RecommendLv = 12;
  int32 FightTime = 13;
  int32 UseCharacterMaxNumber = 14;
  int32 RespawnTimes = 15;
  repeated int32 OpenDay = 16;
  int32 UseCharacterPoolID = 17;
  int32 UnUseCharacterPoolID = 18;
  int32 DengeonQuestID = 19;
  int32 RewardID = 20;
  int32 StarTimer1 = 21;
  int32 StarTimer2 = 22;
  int32 StarTimer3 = 23;
  bool CanRePlay = 24;
  bool IsCanSweep = 25;
  bool ShieldFoodBuff = 26;
  bool ShieldAchieveAttribute = 27;
  int32 StartVoiceID = 28;
  int32 StarRewardID = 29;
  int32 ShowRewardID = 30;
  repeated int32 StageSpellPassiveIds = 31;
  string SceneConfig = 32;
  repeated int32 MonsterIDs = 33;
  repeated int32 CharacterBuff = 34;
  int32 NewMissionType = 35;
  int32 NewDifficultyLevel = 36;
  int32 NewTreasureBoxRewardType = 37;
  int32 NewElementType = 38;
  int32 NewConsumptionMode = 39;
}

message CharacterPoolDatas {
  repeated CharacterPoolConfigure Datas = 1;
}

message CharacterPoolConfigure {
  int32 ID = 1;
  repeated CharacterPoolGroupInfo CharacterPoolGroupInfo = 2;
}

message CharacterPoolGroupInfo {
  int32 Index = 1;
  int32 CharacterID = 2;
  int32 NewWeaponType = 3;
  int32 NewCharacterType = 4;
}

message DungeonQuestDatas {
  repeated DungeonQuestConfigure Datas = 1;
}

message DungeonQuestConfigure {
  int32 ID = 1;
  repeated DungeonQuestGroupInfo DungeonQuestGroupInfo = 2;
}

message DungeonQuestGroupInfo {
  int32 Index = 1;
  bool Active = 2;
  int32 AchieveConditionID = 3;
}
